[3.x-find-list] Finder: refactored requirements