@@ -1,14 +1,13 @@
 package de.team33.cmd.files.job;
 
-import de.team33.cmd.files.common.Output;
 import de.team33.cmd.files.common.RequestException;
+import de.team33.cmd.files.testing.Buffer;
 import de.team33.cmd.files.testing.ModifyingTestBase;
 import de.team33.patterns.io.deimos.TextIO;
-import de.team33.testing.stdio.ersa.Redirected;
 import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
-import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
@@ -20,37 +19,49 @@ class FinderTest extends ModifyingTestBase {
 
     @Test
     final void run_rxALL() throws RequestException, IOException {
-        final Runnable job = Finder.job(Output.SYSTEM,
-                                        Arrays.asList("files", "find", "rx:.*", leftPath().toString()));
-        final String result = Redirected.outputOf(job::run)
-                                        .replace(leftPath().toString(), "[PATH]");
+        final Buffer buffer = new Buffer();
+
+        Finder.job(buffer, List.of("files", "find", leftPath().toString(), "rx:.*"))
+              .run();
+
+        final String result = buffer.toString()
+                                    .replace(leftPath().toString(), "[PATH]");
         assertEquals(TextIO.read(FinderTest.class, "FinderTest-run_ALL.txt"), result);
     }
 
     @Test
     final void run_wcALL() throws RequestException, IOException {
-        final Runnable job = Finder.job(Output.SYSTEM,
-                                        Arrays.asList("files", "find", "*", leftPath().toString()));
-        final String result = Redirected.outputOf(job::run)
-                                        .replace(leftPath().toString(), "[PATH]");
+        final Buffer buffer = new Buffer();
+
+        Finder.job(buffer, List.of("files", "find", leftPath().toString(), "*"))
+              .run();
+
+        final String result = buffer.toString()
+                                    .replace(leftPath().toString(), "[PATH]");
         assertEquals(TextIO.read(FinderTest.class, "FinderTest-run_ALL.txt"), result);
     }
 
     @Test
-    final void run_java() throws RequestException, IOException {
-        final Runnable job = Finder.job(Output.SYSTEM,
-                                        Arrays.asList("files", "find", "*.java", leftPath().toString()));
-        final String result = Redirected.outputOf(job::run)
-                                        .replace(leftPath().toString(), "[PATH]");
+    final void run_java() throws RequestException {
+        final Buffer buffer = new Buffer();
+
+        Finder.job(buffer, List.of("files", "find", leftPath().toString(), "*.java"))
+              .run();
+
+        final String result = buffer.toString()
+                                    .replace(leftPath().toString(), "[PATH]");
         assertEquals(TextIO.read(FinderTest.class, "FinderTest-run_java.txt"), result);
     }
 
     @Test
     final void run_56() throws RequestException, IOException {
-        final Runnable job = Finder.job(Output.SYSTEM,
-                                        Arrays.asList("files", "find", "rx:.{5,6}", leftPath().toString()));
-        final String result = Redirected.outputOf(job::run)
-                                        .replace(leftPath().toString(), "[PATH]");
+        final Buffer buffer = new Buffer();
+
+        Finder.job(buffer, List.of("files", "find", leftPath().toString(), "rx:.{5,6}"))
+              .run();
+
+        final String result = buffer.toString()
+                                    .replace(leftPath().toString(), "[PATH]");
         assertEquals(TextIO.read(FinderTest.class, "FinderTest-run_56.txt"), result);
     }
 }
